--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
     
   shared_preferences: ^2.2.2 # Você pode usar a versão mais recente
 
+  # Pacote para encontrar o caminho correto para salvar arquivos no Android e iOS
+  path_provider: ^2.0.11 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -47,6 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  # Pacotes para gerar código de conversão JSON automaticamente (melhor prática)
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
