--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -44,6 +44,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  plugin_platform_interface: ^2.0.0
+  path_provider_platform_interface: ^2.0.0
+
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
