--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -41,10 +41,10 @@ jobs:
         run: flutter pub get
         working-directory: ./my_app
           
-      # 5. Análise Estática do Código
-      - name: Analisar o código
-        run: flutter analyze
-        working-directory: ./my_app
+      # # 5. Análise Estática do Código
+      # - name: Analisar o código
+      #   run: flutter analyze
+      #   working-directory: ./my_app
 
       # 6. Rodar os Testes
       - name: Rodar os testes
