--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
     sdk: flutter
 
   provider: ^6.1.2
+
+  intl: ^0.19.0
     
-  shared_preferences: ^2.2.2 # Você pode usar a versão mais recente
+  shared_preferences: ^2.2.2 
 
   # Pacote para encontrar o caminho correto para salvar arquivos no Android e iOS
   path_provider: ^2.0.11 
