--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -49,6 +49,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.4
+  
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  min_sdk_android: 21 # Importante para ícones adaptativos modernos
+  adaptive_icon_background: "#FFC107"
 
   plugin_platform_interface: ^2.0.0
   path_provider_platform_interface: ^2.0.0
@@ -60,6 +68,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
   # Pacotes para gerar código de conversão JSON automaticamente (melhor prática)
 
 # For information on the generic Dart part of this file, see the
